--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,27 @@
 
   <title>portfolio_app</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Firebase JS SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+
+  <script>
+    // Firebase config (ambil dari Firebase console > Project settings > Web App)
+    const firebaseConfig = {
+      apiKey: "AIzaSyAIijCxy9mt_Y5ezfX7oESp18m8JkbRgJ4",
+      authDomain: "flutter-app-a8d94.firebaseapp.com",
+      projectId: "flutter-app-a8d94",
+      storageBucket: "flutter-app-a8d94.appspot.com",
+      messagingSenderId: "134227445671",
+      appId: "1:134227445671:android:578f04d9cdbb070588d882"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
